Fixed problem with multiple operator input and removed overflow fix

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@
   line-height: 30px;
 
   white-space: nowrap;
-  direction: rtl;
 }
 
 .display .reset {
